@@ -1,21 +1,20 @@
 package faang.school.godbless.Task_24;
 
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
 
 public class Main {
-    public static void main(String[] args) throws InterruptedException {
-        GooglePhotosAutoUploader googlePhotosAutoUploader = new GooglePhotosAutoUploader("lock",
-                new ArrayList<>(Arrays.asList("OnePath", "AnotherPath")));
+    public static void main(String[] args) {
+        GooglePhotosAutoUploader googlePhotosAutoUploader = new GooglePhotosAutoUploader(
+                new ArrayList<>(List.of("OnePath", "AnotherPath")));
 
-        Thread toLoadThread = new Thread(googlePhotosAutoUploader::startAutoUpload);
-        Thread toViewPhotoThread = new Thread(() -> System.out.println(googlePhotosAutoUploader.getPhotosToUpload()));
+        ExecutorService executorService = Executors.newFixedThreadPool(2);
+        executorService.execute(googlePhotosAutoUploader::startAutoUpload);
+        executorService.execute(() -> System.out.println(googlePhotosAutoUploader.getPhotosToUpload()));
 
-        toViewPhotoThread.start();
-        toLoadThread.start();
-
-        toViewPhotoThread.join();
-        toLoadThread.join();
+        executorService.shutdown();
 
     }
 }
